ingress-controller/traefik/traefik-ds.yaml
kind: DaemonSet
apiVersion: extensions/v1beta1
metadata:
  name: traefik
  namespace: kube-system
  labels:
    run: ingress-controller
spec:
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik
      hostNetwork: true
      containers:
      - image: traefik:1.7.7-alpine
        name: traefik
        resources:
          requests:
            cpu: 100m
        ports:
        - name: http
          containerPort: 80
        - name: https
          containerPort: 443
        - name: custom
          containerPort: 1024
        securityContext:
          capabilities:
            drop:
            - ALL
            add:
            - NET_BIND_SERVICE
        args:
        - --kubernetes
        - --api
        - --logLevel=DEBUG
        - --defaultentrypoints=https
        - --entrypoints=Name:https Address::443 TLS
        - --entrypoints=Name:http Address::80 Redirect.EntryPoint:https
        - --entrypoints=Name:custom Address::1024
